<resources>
    <string name="app_name">Myoitc</string>
    <string name="Username">Email Id</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>

    <string name="google_key">AIzaSyAWSNJ2-Kdk2aNtM1aqJpaLGhtL3ZZpCMk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="us">\u0024</string>
    <string name="Rs">\u20B9</string>
    <string name="checkin">CHECKIN</string>
    <string name="checkout">CHECKOUT</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="nodatafound">No Data Found</string>
    <string name="CheckinLoc">Checkin Location</string>
    <string name="CheckOutLoc">Checkout Location</string>
    <string name="Checkintime">Checkin Time</string>
    <string name="Checkouttime">Checkout Time</string>
    <string name="logintoaccount">Login to your account</string>
    <string name="nav_home">Home</string>
    <string name="nav_book">Book appointment</string>
    <string name="viewprofile">View Profile</string>
    <string name="bookappointment">Book Appointment</string>
    <string name="selectdate">Date</string>
    <string name="selecttime">Time</string>
    <string name="booknow">Book Now</string>
    <string name="searchconcern">Search by Health Concern</string>
    <string name="ConsulationFee">Consulting Fee :</string>
    <string name="doctornumber">Mobile :</string>
    <string name="hint">Ex: Doctors</string>
    <string name="appointmentconfirm">Appointment Confirmed</string>
    <string name="goback">Go Home</string>
    <string name="doctordetails">Doctor Details</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="fees">\u0024 %s /-</string>
    <string name="quali">%s \u2022 %s</string>
    <string name="bookingid">Booking Id: %s</string>
    <string name="hospitaladdress">%s , %s</string>


    <string name="font_bold">JosefinSans-Bold.ttf</string>
    <string name="font_semibold">JosefinSans-SemiBold.ttf</string>
    <string name="font_regular">JosefinSans-Regular.ttf</string>
    <string name="font_light">JosefinSans-Light.ttf</string>
    <string name="font_thin">JosefinSans-Thin.ttf</string>

    <string name="font_exo_bold">Exo-Bold.ttf</string>
    <string name="font_exo_semibold">Exo-SemiBold.ttf</string>
    <string name="font_exo_medium">Exo-Medium.ttf</string>
    <string name="font_exo_regular">JosefinSans-Regular.ttf</string>
    <string name="rating">Rating</string>
    <string name="fes_title">Fees</string>
    <string name="about">About</string>
    <string name="availabletoday">Available Today</string>
    <string name="availabletimgs">Available Timings</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string name="Name">Name</string>

    <string name="activity_book_app">Book Appointment</string>
    <string name="activity_doctors_list">Doctors List</string>
    <string name="activity_historydetails">History Details</string>
    <string name="activity_doctor_cat">Doctors Category</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="allrights">© Velozion Technologies Pvt. Ltd. | All Rights Reserved</string>
    <string name="gpsonnectionnotfound">Gps Connection Not Found</string>
    <string name="enablegps">Do You Want To Enable Gps ? </string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="internetconnectionnotfound">Internet Connection Not Found \n Do You Want To Turn On ?</string>
    <string name="intenert">Internet Connection</string>
    <string name="turnon">Turn On / Retry</string>
    <string name="gpsconection">GPS Connection</string>
    <string name="imagedesc">Image</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>


</resources>
