<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
       <!-- <item
            android:id="@+id/nav_task_management"
            android:icon="@drawable/icon_add"
            app:itemTextAppearance="@style/ToolBarText"
            android:title="@string/nav_taskmanagemnt" />-->

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                app:itemTextAppearance="@style/ToolBarText"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                app:itemTextAppearance="@style/ToolBarText"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
