<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:src="@drawable/myoticlogo"
            android:layout_gravity="center"
            android:layout_height="@dimen/_50sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/logintoaccount"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/lightblack"
            android:hint="@string/Username"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/login_emailid"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/lightblack"
            android:hint="@string/Password"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="textPassword"
            android:id="@+id/login_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:text="@string/login"
            android:id="@+id/login_login"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>