<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.DoctorsCategory">


    <LinearLayout
        android:layout_width="match_parent"
        android:background="#EBEBF0"
        android:padding="@dimen/_12sdp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/editext_bg"
            android:hint="@string/hint"
            android:drawablePadding="@dimen/_2sdp"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:drawableLeft="@drawable/icon_search"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <com.chootdev.typefaced.TypeFacedTextView
            android:layout_width="wrap_content"
            android:textColor="@color/title_color"
            app:textView_font="@string/font_exo_regular"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/searchconcern"
            android:layout_height="wrap_content" />



        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/doc_cat_recylerview"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>



</LinearLayout>