<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapFrag">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.chootdev.typefaced.TypeFacedTextView
            android:id="@+id/checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_bg"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/checkin"
            android:textColor="@color/white"
            app:textView_font="@string/font_exo_regular" />

        <com.chootdev.typefaced.TypeFacedTextView
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button2_bg"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:visibility="gone"
            app:textView_font="@string/font_exo_regular" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/_2sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        android:visibility="gone"
        android:weightSum="5">

        <com.chootdev.typefaced.TypeFacedTextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:textView_font="@string/font_exo_regular" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/imagedesc"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon_checked" />

    </LinearLayout>


</RelativeLayout>