<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_7sdp"
    android:orientation="vertical"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="@dimen/_2sdp"
    card_view:cardElevation="@dimen/_2sdp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <com.velozion.myoitc.utilities.RoundedImageView
                android:id="@+id/docter_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_vertical"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <com.chootdev.typefaced.TypeFacedTextView
                    android:id="@+id/docter_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="jaggi"
                    card_view:textView_font="@string/font_exo_bold"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:padding="@dimen/_1sdp"
                    android:textColor="@color/title_color"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_14sdp" />

                <com.chootdev.typefaced.TypeFacedTextView
                    android:id="@+id/docter_education"
                    android:layout_width="match_parent"
                    android:text="mmbs"
                    card_view:textView_font="@string/font_exo_regular"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:padding="@dimen/_1sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/nontitle_color"
                    android:textSize="@dimen/_10sdp" />



                <com.chootdev.typefaced.TypeFacedTextView
                    android:id="@+id/docter_specilist"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_1sdp"
                    android:layout_height="wrap_content"
                    card_view:textView_font="@string/font_exo_regular"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="Cardiology"
                    android:textColor="@color/nontitle_color"
                    android:textSize="@dimen/_12sdp" />

                <RatingBar
                    android:id="@+id/docter_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/_1sdp" />

            </LinearLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@color/view_bg2"
            android:layout_height="@dimen/_1sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_height="wrap_content">

            <com.chootdev.typefaced.TypeFacedTextView
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                card_view:textView_font="@string/font_exo_semibold"
                android:padding="@dimen/_1sdp"
                android:id="@+id/docter_hospital"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="Soukya Hosiptal bangalore"
                android:textColor="@color/nontitle_color"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <com.chootdev.typefaced.TypeFacedTextView
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_1sdp"
                    card_view:textView_font="@string/font_exo_medium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/ConsulationFee"
                    android:textColor="@color/nontitle_color"
                    android:textSize="@dimen/_12sdp" />


                <com.chootdev.typefaced.TypeFacedTextView
                    android:id="@+id/docter_fees"
                    card_view:textView_font="@string/font_exo_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_1sdp"
                    android:text="500"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <com.chootdev.typefaced.TypeFacedTextView
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_1sdp"
                    card_view:textView_font="@string/font_exo_medium"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/doctornumber"
                    android:textColor="@color/nontitle_color"
                    android:textSize="@dimen/_12sdp" />


                <com.chootdev.typefaced.TypeFacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9738942655"
                    card_view:textView_font="@string/font_exo_bold"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:padding="@dimen/_1sdp"
                    android:id="@+id/docter_mobile"
                    android:textColor="@color/title_color"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_12sdp" />



            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/docter_profile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/button4"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/viewprofile"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/docter_bookappointment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/bg_full_"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/bookappointment"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>




    </LinearLayout>


</android.support.v7.widget.CardView>
