<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_2sdp"
    app:cardElevation="@dimen/_1sdp"
    app:cardUseCompatPadding="true"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/design_3"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/CheckinLoc"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/checkinloc"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/CheckOutLoc"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/checkoutloc"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:background="@color/background2"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_height="1dp"/>

            <View
                android:layout_width="0dp"
                android:background="@color/background2"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_height="1dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Checkintime"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/checkintime"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_2sdp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/Checkouttime"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/checkouttime"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>